ola-parser/src/testdata/syntaxTests/iceRegressionTests/identifier_collision_return_declare.sol
contract C {
        fn ( u256 ) external -> ( a [ ] calldata )  a = ( 1 / 2 ) ;
}
// ----
// TypeError 5172: (58-59): Name has to refer to a struct, enum or contract.
